[gd_scene load_steps=16 format=3 uid="uid://fh3f1v3wq7sv"]

[ext_resource type="Script" path="res://game_over_screen/game_over_screen.gd" id="1_kcke1"]
[ext_resource type="LabelSettings" uid="uid://c1nkhfaesa8ct" path="res://level/font/colored_pixel_22.tres" id="2_btkvh"]
[ext_resource type="Shader" path="res://level/shaders/game_over_screen.gdshader" id="2_lrpmu"]
[ext_resource type="FontFile" uid="uid://b0rh2gh2wsdye" path="res://level/font/Pixeled.ttf" id="3_ajulj"]
[ext_resource type="Texture2D" uid="uid://dlkfx7fd4vr5" path="res://sprites/Sprite-norma-snow-export.png" id="5_r0x7y"]
[ext_resource type="Texture2D" uid="uid://dsaookvjmgta6" path="res://sprites/Sprite-dark-snow-export.png" id="6_3eoun"]
[ext_resource type="Texture2D" uid="uid://33dvqjroueyf" path="res://sprites/Sprite-light-snow-export.png" id="7_cpho5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_14r7r"]
shader = ExtResource("2_lrpmu")
shader_parameter/lod = 0.0

[sub_resource type="LabelSettings" id="LabelSettings_hdwmo"]
font = ExtResource("3_ajulj")
font_size = 32
font_color = Color(0.176471, 1, 0.964706, 1)
outline_size = 8
outline_color = Color(0.588235, 0, 0.792157, 1)
shadow_size = 6

[sub_resource type="LabelSettings" id="LabelSettings_adpfp"]
font = ExtResource("3_ajulj")
font_size = 15
font_color = Color(0.176471, 1, 0.964706, 1)
outline_size = 8
outline_color = Color(0.588235, 0, 0.792157, 1)
shadow_size = 6

[sub_resource type="LabelSettings" id="LabelSettings_wx2nb"]
font = ExtResource("3_ajulj")
font_size = 15
font_color = Color(0.176471, 1, 0.964706, 1)
outline_size = 8
outline_color = Color(0.588235, 0, 0.792157, 1)
shadow_size = 6

[sub_resource type="Animation" id="Animation_kn2jd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BgOverlay:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_5mmlg"]
resource_name = "game_over"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BgOverlay:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_athfu"]
resource_name = "restart"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BgOverlay:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lxm63"]
_data = {
"RESET": SubResource("Animation_kn2jd"),
"game_over": SubResource("Animation_5mmlg"),
"restart": SubResource("Animation_athfu")
}

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource("1_kcke1")

[node name="BgOverlay" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_14r7r")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BoxContainer" type="VBoxContainer" parent="BgOverlay"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 2.0
offset_top = 88.0
offset_right = 2.0
offset_bottom = 313.0
grow_horizontal = 2
alignment = 1

[node name="GameOverLabel" type="Label" parent="BgOverlay/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "GAME OVER
"
label_settings = SubResource("LabelSettings_hdwmo")

[node name="ScoreLabel" type="Label" parent="BgOverlay/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "SCORE: 99999
"
label_settings = ExtResource("2_btkvh")

[node name="BestScoreLabel" type="Label" parent="BgOverlay/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "BEST SCORE: 999999999
"
label_settings = ExtResource("2_btkvh")

[node name="ButtonContainer" type="VBoxContainer" parent="BgOverlay"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -222.0
offset_top = -1.99997
offset_right = -222.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.4, 1.4)
alignment = 1

[node name="Reset" type="TextureButton" parent="BgOverlay/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_r0x7y")
texture_pressed = ExtResource("6_3eoun")
texture_hover = ExtResource("7_cpho5")

[node name="ResetLabel" type="Label" parent="BgOverlay/ButtonContainer/Reset"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.221
anchor_right = 0.5
anchor_bottom = 0.221
offset_left = -52.5
offset_top = -20.995
offset_right = 52.5
offset_bottom = 21.005
grow_horizontal = 2
text = "Restart"
label_settings = SubResource("LabelSettings_adpfp")

[node name="Quit" type="TextureButton" parent="BgOverlay/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_r0x7y")
texture_pressed = ExtResource("6_3eoun")
texture_hover = ExtResource("7_cpho5")

[node name="QuitLabel" type="Label" parent="BgOverlay/ButtonContainer/Quit"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.221
anchor_right = 0.5
anchor_bottom = 0.221
offset_left = -27.0
offset_top = -20.995
offset_right = 27.0
offset_bottom = 21.005
grow_horizontal = 2
text = "Quit"
label_settings = SubResource("LabelSettings_wx2nb")

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lxm63")
}
autoplay = "game_over"

[connection signal="button_down" from="BgOverlay/ButtonContainer/Reset" to="." method="_on_reset_button_down"]
[connection signal="button_up" from="BgOverlay/ButtonContainer/Reset" to="." method="_on_reset_button_up"]
[connection signal="button_down" from="BgOverlay/ButtonContainer/Quit" to="." method="_on_quit_button_down"]
[connection signal="button_up" from="BgOverlay/ButtonContainer/Quit" to="." method="_on_quit_button_up"]
